--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 }
 
 .header {
-    background-color: rgb(0, 204, 0);
+    background-color: rgb(27, 0, 180);
     text-align: center;
     padding: 50px;
 }
@@ -25,11 +25,15 @@ body {
 }
 
 #tips {
+    color: gray;
     text-align: center;
     font-size: xx-small;
 }
 
 .footer {
+    background-color: rgb(27, 0, 180);
+    color: white;
+    font-size: 12px;
     text-align: center;
     margin-top: 500px;
 }
