--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 }
 
 .header {
-    background-color: rgb(27, 0, 180);
+    background-image: linear-gradient(-45deg , rgb(27,0,180) ,rgb(38, 0, 255), white, rgb(38, 0, 255) );
     text-align: center;
     padding: 50px;
 }
