--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 }
 
 .header {
-    background-image: linear-gradient(-60deg , rgb(32, 0, 211) ,rgb(80, 49, 255), rgb(65, 125, 255), rgb(38, 0, 255) ,rgb(23, 0, 151));
+    background-image: linear-gradient(-60deg , rgb(32, 0, 211) ,rgb(80, 49, 255), rgb(72, 130, 255), rgb(77, 45, 255) ,rgb(23, 0, 151));
     text-align: center;
     padding: 50px;
 }
@@ -31,9 +31,14 @@ body {
 }
 
 .footer {
-    background-color: rgb(27, 0, 180);
+    background-image: linear-gradient(-60deg , rgb(32, 0, 211) ,rgb(80, 49, 255), rgb(72, 130, 255), rgb(77, 45, 255) ,rgb(23, 0, 151));
     color: white;
     font-size: 12px;
     text-align: center;
-    margin-top: 500px;
+    margin-top: 50%;
+}
+
+.article-title {
+    font-weight: bold;
+    font-size: 20px;
 }
