--- a/style.css
+++ b/style.css
@@ -42,3 +42,9 @@ body {
     font-weight: bold;
     font-size: 20px;
 }
+
+#article {
+    width: 100%;
+    height: 60%;
+    margin-left: 40px;
+}
