--- a/style.css
+++ b/style.css
@@ -1,20 +1,23 @@
 #title {
     color: #ffffff;
+    font-weight: 300;
     font-size: 50px;
-    text-align: center;
+    width: 600px;
 }
 
 #intro {
-    margin-top: 20px;
     color: #ffffff;
-    font-style: italic;
-    font-size: 10px;
+    font-size: 70%;
+    width: 200px;
+    height: 15px;
+    display: inline-block;
+    vertical-align: middle;
+    line-height: 15px;
 }
 
 .header {
-    background-image: linear-gradient(-60deg , rgb(32, 0, 211) ,rgb(80, 49, 255), rgb(72, 130, 255), rgb(77, 45, 255) ,rgb(23, 0, 151));
-    text-align: center;
-    padding: 50px;
+    background-color: rgb(0, 0, 167);
+    padding: 10px;
 }
 
 body {
@@ -24,15 +27,8 @@ body {
     margin-right: 0px;
 }
 
-#tips {
-    color: gray;
-    text-align: center;
-    font-size: xx-small;
-}
-
 .footer {
-    background-image: linear-gradient(-60deg , rgb(32, 0, 211) ,rgb(80, 49, 255), rgb(72, 130, 255), rgb(77, 45, 255) ,rgb(23, 0, 151));
-    color: white;
+    color: blue;
     font-size: 12px;
     text-align: center;
     margin-top: 50%;
@@ -43,13 +39,42 @@ body {
     font-size: 20px;
 }
 
-#article {
-    width: 100%;
-    height: 60%;
-    margin-left: 40px;
-}
-
 #chenxu {
     width: 500px;
     height: 600px;
+}
+
+#main-title {
+    font-size: 30px;
+    font-weight: 800;
+    color: darkblue;
+    text-shadow: 15px 15px 2px white;
+    margin-left: 5%;
+    margin-top: 5%;
+}
+
+.line {
+    margin-top: 20px;
+    margin-left: 5%;
+    background-color: darkblue;
+    width: 90%;
+    height: 10px;
+}
+
+#contact {
+    right: 0.2%;
+    width: 150px;
+    font-weight: 320;
+    color:rgb(125, 125, 255);
+    float: left;
+    display: inline-block;
+    position: absolute;
+}
+
+#index {
+    margin-left: 10%;
+}
+
+#RocketVideo {
+    margin-left: 50%;
 }
